# pidibble

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
docs/: mmcif_coverage.md  notes.md  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  usage.rst
docs/source/guide/: advanced.rst  assemblies.rst  data_model.rst  index.rst  large_structures.rst  loading.rst  mmcif.rst  nonconformance.rst  record_reference.rst  records.rst
pidibble/: baseparsers.py  baserecord.py  hex.py  mmcif_parse.py  pdbparse.py  pdbrecord.py  pdbwrite.py  rcsb.py
pidibble/resources/: mmcif_format.yaml  pdb_format.yaml
scripts/: release.sh
src/pidibble/: rcsb.py
tests/unit/: test_nonconformance.py  test_pdbwrite.py  test_rcsb.py
tests/unit/test_pdbwrite/: .gitignore
tests/unit/test_rcsb/: 1ca2.cif  4tvp.cif  test_pdb_format.yaml
