[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pidibble"
version = "1.0"
authors = [
  { name="Cameron F Abrams", email="cfa22@drexel.edu" },
]
description = "A complete Protein Data Bank (PDB) file parser"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cameronabrams/pidibble"
"Bug Tracker" = "https://github.com/cameronabrams/pidibble/issues"